--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node --watch index.js"
+    "start": "npx prisma migrate deploy && node index"
   },
   "keywords": [],
   "author": "Ives van Hoorne",
