--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@prisma/client": "6.16.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+     "prisma": "6.16.1"
   }
 }
